Bug 1112692: BundlePolicy support, and support for more than one BUNDLE group. r=mt, r=smaug