media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.h
@@ -146,9 +146,11 @@ class PCUuidGenerator : public mozilla::JsepUuidGenerator {
   nsCOMPtr<nsIUUIDGenerator> mGenerator;
 };
 
-class IceConfiguration
+class PeerConnectionConfiguration
 {
 public:
+  PeerConnectionConfiguration() : mBundlePolicy(kBundleBalanced) {}
+
   bool addStunServer(const std::string& addr, uint16_t port,
                      const char* transport)
   {
@@ -182,9 +184,18 @@ public:
   void addTurnServer(const NrIceTurnServer& server) { mTurnServers.push_back (server); }
   const std::vector<NrIceStunServer>& getStunServers() const { return mStunServers; }
   const std::vector<NrIceTurnServer>& getTurnServers() const { return mTurnServers; }
+  void setBundlePolicy(JsepBundlePolicy policy) { mBundlePolicy = policy;}
+  JsepBundlePolicy getBundlePolicy() const { return mBundlePolicy; }
+
+#ifndef MOZILLA_EXTERNAL_LINKAGE
+  nsresult Init(const RTCConfiguration& aSrc);
+  nsresult AddIceServer(const RTCIceServer& aServer);
+#endif
+
 private:
   std::vector<NrIceStunServer> mStunServers;
   std::vector<NrIceTurnServer> mTurnServers;
+  JsepBundlePolicy mBundlePolicy;
 };
 
 #if !defined(MOZILLA_EXTERNAL_LINKAGE)
@@ -261,10 +272,6 @@ public:
   static already_AddRefed<PeerConnectionImpl>
       Constructor(const mozilla::dom::GlobalObject& aGlobal, ErrorResult& rv);
   static PeerConnectionImpl* CreatePeerConnection();
-  static nsresult ConvertRTCConfiguration(const RTCConfiguration& aSrc,
-                                          IceConfiguration *aDst);
-  static nsresult AddIceServer(const RTCIceServer& aServer,
-                               IceConfiguration* aDst);
   already_AddRefed<DOMMediaStream> MakeMediaStream();
 
   nsresult CreateRemoteSourceStreamInfo(nsRefPtr<RemoteSourceStreamInfo>* aInfo,
@@ -334,26 +341,22 @@ public:
     return mWindow;
   }
 
-  // Initialize PeerConnection from an IceConfiguration object (unit-tests)
+  // Initialize PeerConnection from a PeerConnectionConfiguration object
+  // (used directly by unit-tests, and indirectly by the JS entry point)
+  // This is necessary because RTCConfiguration can't be used by unit-tests
   nsresult Initialize(PeerConnectionObserver& aObserver,
                       nsGlobalWindow* aWindow,
-                      const IceConfiguration& aConfiguration,
-                      nsIThread* aThread) {
-    return Initialize(aObserver, aWindow, &aConfiguration, nullptr, aThread);
-  }
+                      const PeerConnectionConfiguration& aConfiguration,
+                      nsISupports* aThread);
 
+#ifndef MOZILLA_EXTERNAL_LINKAGE
   // Initialize PeerConnection from an RTCConfiguration object (JS entrypoint)
   void Initialize(PeerConnectionObserver& aObserver,
                   nsGlobalWindow& aWindow,
                   const RTCConfiguration& aConfiguration,
                   nsISupports* aThread,
-                  ErrorResult &rv)
-  {
-    nsresult r = Initialize(aObserver, &aWindow, nullptr, &aConfiguration, aThread);
-    if (NS_FAILED(r)) {
-      rv.Throw(r);
-    }
-  }
+                  ErrorResult &rv);
+#endif
 
   NS_IMETHODIMP_TO_ERRORRESULT(CreateOffer, ErrorResult &rv,
                                const RTCOfferOptions& aOptions)
@@ -616,11 +619,6 @@ private:
   virtual ~PeerConnectionImpl();
   PeerConnectionImpl(const PeerConnectionImpl&rhs);
   PeerConnectionImpl& operator=(PeerConnectionImpl);
-  NS_IMETHODIMP Initialize(PeerConnectionObserver& aObserver,
-                           nsGlobalWindow* aWindow,
-                           const IceConfiguration* aConfiguration,
-                           const RTCConfiguration* aRTCConfiguration,
-                           nsISupports* aThread);
   nsresult CalculateFingerprint(const std::string& algorithm,
                                 std::vector<uint8_t>& fingerprint) const;
   nsresult ConfigureJsepSessionCodecs();
